--- a/Notebooks/Polly_Workshop.ipynb
+++ b/Notebooks/Polly_Workshop.ipynb
@@ -83,14 +83,16 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "import boto3\n",
     "import IPython\n",
     "from pprint import pprint\n",
     "\n",
-    "polly = boto3.client('polly', region_name='eu-west-1')"
+    "polly = boto3.client('polly', region_name='us-east-1')"
    ]
   },
   {
@@ -454,21 +456,21 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "conda_python3",
+   "display_name": "Python 2",
    "language": "python",
-   "name": "conda_python3"
+   "name": "python2"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 3
+    "version": 2
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "pygments_lexer": "ipython2",
+   "version": "2.7.13"
   }
  },
  "nbformat": 4,
